--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,28 +1,59 @@
-main {
-    margin-inline: 8em;
-}
-
-.footer-main {
-    z-index: 800;
-    margin-inline: max(2vw, 20vw);
-    margin-top: 10em;
-    padding: 1em;
-    border-top: 2px solid $footer-color;
-    .footer-text-container {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        &:nth-child(1) {
-            p {
-                color: $footer-color;
-                margin-top: .3em;
-                font-size: clamp(.8vw, 1em);
-                span {
+@media only screen and (min-width: $width-desktop-bp) {
+    .footer-main {
+        margin-inline: max(2vw, 20vw);
+        margin-top: 10em;
+        padding: 1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
                     color: $footer-color;
-                    text-decoration: underline;
+                    margin-top: .3em;
                     font-size: clamp(.8vw, 1em);
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
                 }
             }
         }
     }
 }
+
+
+/* mobile iPhone 8 plus */
+
+@media only screen and (max-width: $width-iphone8-bp) {
+    .footer-main {
+        margin-inline: 12vw;
+        margin-top: 5em;
+        padding: .1em;
+        border-top: 2px solid $footer-color;
+        .footer-text-container {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            &:nth-child(1) {
+                p {
+                    color: $footer-color;
+                    font-size: clamp(.8vw, 1em);
+                    margin-top: .1em;
+                    span {
+                        color: $footer-color;
+                        text-decoration: underline;
+                        font-size: clamp(.8vw, 1em);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* general */
+
+@media only screen and(max-width: $width-general-bp) {}
