--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,113 +1,192 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-header {
-    height: 8vh;
-    margin-bottom: 2vh;
-    margin-inline: 8em;
-    nav {
-        /* position: fixed;
-        z-index: 999; */
-        .navbar-main {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid black;
-            .logo {
-                img {
-                    height: 50px;
-                    margin: 10px;
-                }
-            }
-            .button {
-                /*  display: flex;
-            justify-content: end; */
-                /* body {
-             min-height: 100vh;
-            background: linear-gradient(#7d6cfc, #c635ea);} */
-                /* background-color: red; */
-                .button-container li {
-                    float: left;
-                    list-style: none;
-                    line-height: 20px;
-                    width: 150px;
-                    /* margin-right: 30px; */
-                }
-                .button-container li a {
-                    text-decoration: none;
-                    display: block;
-                    font-size: 120%;
-                    color: black;
-                }
-            }
-            .action {
-                display: none;
-                /* position: fixed; */
-                bottom: 50px;
-                left: 50px;
-                width: 50px;
-                height: 50px;
-                background: #fff;
-                border-radius: 50%;
-                border: 2px solid black;
-                cursor: pointer;
-                /* box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1); */
-            }
-            .action span {
-                /* position: relative; */
-                width: 100%;
-                height: 100%;
+@media only screen and (min-width: $width-desktop-bp) {
+    header {
+        height: 4.5em;
+        margin-bottom: 4em;
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 999;
+        nav {
+            margin-inline: 8em;
+            .navbar-main {
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 2em;
-                color: #000000;
-                transition: 0.3s ease-in-out;
-                font-family: "Poppins", sans-serif;
+                justify-content: space-between;
+                align-content: center;
+                .logo {
+                    img {
+                        height: 50px;
+                        margin: 10px;
+                    }
+                    #respon-img-mini {
+                        display: none;
+                    }
+                }
+                .button {
+                    margin: 10px;
+                    display: flex;
+                    align-items: center;
+                    .button-container li {
+                        position: relative;
+                        float: left;
+                        list-style: none;
+                        width: fit-content;
+                        text-align: center;
+                        background-color: transparent;
+                        font-size: clamp(90%, 120%, 125%);
+                        margin-left: .7em;
+                    }
+                    .button-container a {
+                        text-decoration: none;
+                        color: black;
+                        .button-container a:after {
+                            background: none repeat scroll 0 0 transparent;
+                            bottom: 0;
+                            content: "";
+                            height: 2px;
+                            left: 50%;
+                            position: absolute;
+                            background: black;
+                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                            width: 0;
+                        }
+                        .button-container a:hover:after {
+                            width: 100%;
+                            left: 0;
+                        }
+                    }
+                }
             }
-            /* .action.active span {
-        transform: rotate(135deg);
+        }
     }
-    .action ul {
-        position: absolute;
-        bottom: 55px;
-        background: #fff;
-        min-width: 250px;
-        padding: 20px;
-        border-radius: 20px;
-        opacity: 0;
-        visibility: hidden;
-        transition: 0.3s;
+}
+
+
+/* mobile iPhone 8 plus */
+
+@media only screen and (max-width: $width-iphone8-bp)
+/* and (max-height: $height-iphone8-bp) */
+
+{
+    header {
+        margin-bottom: 1em;
+        height: 8vh;
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 999;
+        nav {
+            margin-inline: 1em;
+            .navbar-main {
+                display: flex;
+                justify-content: space-between;
+                align-content: center;
+                .logo {
+                    img {
+                        height: 40px;
+                        margin: 10px;
+                    }
+                    #respon-img-big {
+                        display: none;
+                    }
+                    #respon-img-mini {
+                        display: flex;
+                    }
+                }
+                .button {
+                    margin: 10px;
+                    display: flex;
+                    align-items: center;
+                    .button-container li {
+                        position: relative;
+                        float: left;
+                        list-style: none;
+                        width: fit-content;
+                        text-align: center;
+                        background-color: transparent;
+                        font-size: 100%;
+                        margin-left: .7em;
+                    }
+                    .button-container a {
+                        text-decoration: none;
+                        color: black;
+                        .button-container a:after {
+                            background: none repeat scroll 0 0 transparent;
+                            bottom: 0;
+                            content: "";
+                            height: 2px;
+                            left: 50%;
+                            position: absolute;
+                            background: black;
+                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                            width: 0;
+                        }
+                        .button-container a:hover:after {
+                            width: 100%;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+        }
     }
-    .action.active ul {
-        bottom: 65px;
-        opacity: 1;
-        visibility: visible;
-        transition: 0.3s;
-    }
-    .action ul li {
-        list-style: none;
-        text-decoration: none;
+}
+
+
+/* general */
+
+@media (max-width: $width-general-bp) {
+    header {
+        height: 5em;
         display: flex;
-        justify-content: center;
         align-items: center;
-        padding: 7px 0;
-    }
-    
-    .action ul li:hover {
-        font-weight: 600;
-    }
-    .action ul li:not(:last-child) {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    }
-    .action ul li img {
-        margin-right: 15px;
-        opacity: 0.2;
-        transform: scale(0.7);
-    }
-    .action ul li:hover img {
-        opacity: 0.8;
-        transform: scale(1);
-    }
-     */
+        justify-content: center;
+        nav {
+            margin-inline: .6em;
+            .navbar-main {
+                .logo {
+                    img {
+                        height: 40px;
+                        margin: 10px;
+                    }
+                    #respon-img-big {
+                        display: none;
+                    }
+                    #respon-img-mini {
+                        display: flex;
+                    }
+                }
+                .button {
+                    .button-container li {
+                        position: relative;
+                        float: left;
+                        list-style: none;
+                        width: fit-content;
+                        text-align: center;
+                        background-color: transparent;
+                        font-size: 90%;
+                        margin-left: .7em;
+                    }
+                    .button-container a {
+                        text-decoration: none;
+                        color: black;
+                        .button-container a:after {
+                            background: none repeat scroll 0 0 transparent;
+                            bottom: 0;
+                            content: "";
+                            height: 2px;
+                            left: 50%;
+                            position: absolute;
+                            background: black;
+                            transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                            width: 0;
+                        }
+                        .button-container a:hover:after {
+                            width: 100%;
+                            left: 0;
+                        }
+                    }
+                }
+            }
         }
     }
 }
