--- a/styles/_homepage.scss
+++ b/styles/_homepage.scss
@@ -1,29 +1,39 @@
-        * {
-            font-family: customFontOne;
-        }
-        
-        main {
-            margin-inline: 8em;
-        }
-        
+@media only screen and (min-width: $width-desktop-bp)
+/* and (min-height: $height-desktop-bp)  */
+
+{
+    #index {
+        margin-inline: 8em;
         .first-section {
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            /* height: 90vh; */
-            .first-section-heading-container {
-                text-align: center;
-                margin-top: 2em;
-                h1 {
-                    display: inline-flex;
-                    padding: .5em;
-                    font-size: 3rem;
-                    transition-duration: .2s;
-                    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
+            #helper {
+                display: grid;
+                .first-section-heading-container,
+                .first-section-image-container {
+                    grid-column: 1;
+                    grid-row: 1;
                 }
-                h1:hover {
-                    box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+            }
+            .first-section-heading-container {
+                /* text-align: center; */
+                margin-top: 2em;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                width: 100%;
+                align-items: center;
+                h1 {
+                    font-family: customFontFour;
+                    color: white;
+                    position: absolute;
+                    z-index: 9;
+                    display: inline-flex;
+                    background-color: transparent;
+                    font-weight: bolder;
+                    font-size: 6rem;
                     transition-duration: .2s;
+                    user-select: none;
                 }
             }
             .first-section-image-container {
@@ -33,11 +43,17 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                position: relative;
                 img {
-                    margin: 3em;
                     width: 100%;
-                    max-width: 45em;
-                    height: auto;
+                    max-width: 85em;
+                    height: 30em;
+                    transition-duration: .5s;
+                    filter: blur(1px) grayscale(1);
+                }
+                img:hover {
+                    filter: blur(0) grayscale(0);
+                    z-index: 10;
                 }
                 .first-section-image-container:nth-child(1) {
                     padding-bottom: 5em;
@@ -49,29 +65,20 @@
                 }
             }
         }
-        
         .first-section-paragraph-container {
-            /* align-self: flex-end; */
-            margin-top: 5em;
+            margin-top: 5.5em;
             h2 {
-                /* text-align: center; */
                 padding: 2em 4em;
-                padding-left: 2em;
-                /* background-color: #f7f7f7; */
+                padding-left: 1em;
                 font-size: 1.6rem;
                 transition-duration: .2s;
                 border-left: 3px solid black;
             }
             h2:hover {
-                /* ;               
-                box-shadow: blue 0px -10px 0px 0px inset, rgb(255, 255, 255) 0px 5px 0px -30px, rgb(31, 193, 27) 0px 10px, rgb(255, 255, 255) 0px 15px 0px -30px, rgb(255, 217, 19) 0px 20px, rgb(255, 255, 255) 0px 25px 0px -30px, rgb(255, 156, 85) 0px 30px, rgb(255, 255, 255) 0px 35px 0px -30px, rgb(255, 85, 85) 0px 40px;
- */
                 transition-duration: .2s;
             }
         }
-        
         .second-section {
-            /* height: max(100vh, 120vh); */
             height: 100vh;
             .second-section-content-organizer {
                 height: 80%;
@@ -89,14 +96,16 @@
                         justify-content: center;
                         flex-direction: column;
                         height: 100%;
+                        padding-left: 2em;
                         p {
                             width: 100%;
                             max-width: 25em;
                             height: 100%;
-                            /* padding: 3em;*/
-                            padding-left: 2em;
-                            /* padding: max(3vw, 1em); */
-                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                            justify-self: flex-start;
                         }
                     }
                     img {
@@ -116,15 +125,19 @@
                         justify-content: center;
                         flex-direction: column;
                         height: 100%;
+                        padding-right: 4em;
                         p {
                             width: 40vw;
                             max-width: 25em;
                             height: 100%;
                             /* padding: 3em;*/
-                            padding-right: 2em;
                             /* padding-bottom: -10em; */
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                        h4 {
+                            padding-bottom: .3em;
+                            font-weight: bold;
                         }
                     }
                     img {
@@ -135,13 +148,12 @@
                 }
             }
             .second-section-paragraph-container {
-                height: 20%;
+                min-height: 20%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                /* background-color: #f7f7f7; */
-                /* filter: opacity(40%); */
-                transition-duration: .2s;
+                margin-inline: 4em;
+                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
                 h3 {
                     margin: 4em;
                     margin-inline: 6em;
@@ -149,14 +161,7 @@
                     font-size: 1.2rem;
                 }
             }
-            .second-section-paragraph-container/* :hover */
-            {
-                filter: opacity(100%);
-                transition-duration: .2s;
-                box-shadow: 0px 20px 20px 2px rgba(95, 95, 95, 0.229);
-            }
         }
-        
         .third-section {
             margin-top: 10em;
             .third-section-image-container {
@@ -165,19 +170,11 @@
                 gap: 3em;
                 grid-template-columns: repeat(2, 1fr);
                 grid-template-rows: repeat(2, 1fr);
-                img {
-                    /* max-width: 25em;
-                    height: auto; */
-                }
                 div {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                 }
-                .third-section-image-container:nth-child(1) {}
-                .third-section-image-container:nth-child(2) {}
-                .third-section-image-container:nth-child(3) {}
-                .third-section-image-container:nth-child(4) {}
             }
             .third-section-image-desc-container {
                 width: 100%;
@@ -189,33 +186,235 @@
                     justify-content: center;
                     .third-section-desc-container {
                         align-self: center;
-                        p {
+                        p,
+                        h4 {
                             max-width: 20vw;
                             padding: 2em;
                             padding-left: 3em;
                             font-size: 130%;
                         }
+                        h4 {
+                            padding-bottom: 0;
+                            font-weight: bold;
+                        }
                     }
                     img {
                         /* width: 100%;
-                        max-width: 35em;
-                        height: auto;
-                        max-height: 35em; */
+                                    max-width: 35em;
+                                    height: auto;
+                                    max-height: 35em; */
                         max-width: 30%;
                         height: auto;
                     }
                 }
             }
         }
-        /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
-        
-        #fixed-button {
-            position: fixed;
-            z-index: 999;
-            button {
-                padding: 1em;
-                border-radius: 50px;
-                background-color: red;
+    }
+}
+
+
+/* mobile iPhone 8 plus */
+
+@media only screen and (max-width: $width-iphone8-bp) {
+    #index {
+        margin-inline: 1em;
+        .first-section {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 3em;
+            #helper {
+                display: grid;
+                .first-section-heading-container,
+                .first-section-image-container {
+                    grid-column: 1;
+                    grid-row: 1;
+                }
+            }
+            .first-section-heading-container {
+                margin-top: 2em;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                width: 100%;
+                align-items: center;
+                h1 {
+                    font-family: customFontFour;
+                    color: white;
+                    position: absolute;
+                    z-index: 9;
+                    display: inline-flex;
+                    background-color: transparent;
+                    font-weight: bolder;
+                    font-size: 3.5rem;
+                    transition-duration: .2s;
+                    user-select: none;
+                }
+            }
+            .first-section-image-container {
+                height: 50%;
+                width: 100%;
+                margin-top: 3em;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                position: relative;
+                img {
+                    width: 100%;
+                    max-width: fit-content;
+                    height: 15em;
+                    transition-duration: .5s;
+                    filter: blur(1px) grayscale(1);
+                }
+                img:hover {
+                    filter: blur(0) grayscale(0);
+                    z-index: 10;
+                }
+                .first-section-image-container:nth-child(1) {
+                    padding-bottom: 5em;
+                    height: 5em;
+                }
+                .first-section-image-container:nth-child(2) {
+                    align-self: flex-end;
+                    height: 100%;
+                }
             }
         }
+        .first-section-paragraph-container {
+            margin-top: 5.5em;
+            h2 {
+                padding: 2em 2em;
+                padding-left: 1em;
+                font-size: 1.2rem;
+                transition-duration: .2s;
+                border-left: 3px solid black;
+            }
+            h2:hover {
+                transition-duration: .2s;
+            }
+        }
+        .second-section {
+            .second-section-content-organizer {
+                height: 80%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                .second-section-first-image-desc-container {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding-bottom: 2em;
+                    .second-section-first-desc-container {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        height: 100%;
+                        margin-inline: 1em;
+                        p {
+                            width: 100%;
+                            max-width: 25em;
+                            height: 100%;
+                        }
+                        h4 {
+                            margin-top: 1em;
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                        }
+                    }
+                    img {
+                        width: fit-content;
+                        height: auto;
+                    }
+                }
+                .second-section-second-image-desc-container {
+                    display: flex;
+                    flex-direction: column-reverse;
+                    justify-content: center;
+                    padding-top: 1em;
+                    padding-bottom: 4em;
+                    .second-section-second-desc-container {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        height: 100%;
+                        margin-inline: 1em;
+                        p {
+                            width: 100%;
+                            max-width: 25em;
+                            height: 100%;
+                        }
+                        h4 {
+                            margin-top: 1em;
+                            padding-bottom: .3em;
+                            font-weight: bold;
+                        }
+                    }
+                    img {
+                        width: fit-content;
+                        height: auto;
+                    }
+                }
+            }
+            .second-section-paragraph-container {
+                min-height: 20%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 20px 20px -10px rgba(95, 95, 95, 0.329);
+                h3 {
+                    margin: 4em;
+                    margin-inline: 1em;
+                    text-align: center;
+                    font-size: 1.2rem;
+                }
+            }
+        }
+        .third-section {
+            margin-top: 5em;
+            .third-section-image-container {
+                margin-inline: 1em;
+                display: grid;
+                gap: 1em;
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: repeat(6, 1fr);
+                div {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            .third-section-image-desc-container {
+                width: 100%;
+                margin-top: 4em;
+                display: block;
+                .third-section-image-desc-sub-container {
+                    display: flex;
+                    flex-direction: column-reverse;
+                    align-content: center;
+                    .third-section-desc-container {
+                        align-self: center;
+                        p,
+                        h4 {
+                            padding: 1em;
+                            font-size: 110%;
+                            padding-top: .5em;
+                        }
+                        h4 {
+                            padding-bottom: 0;
+                            font-weight: bold;
+                        }
+                    }
+                    img {
+                        padding-inline: 4em;
+                        max-width: fit-content;
+                        height: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* general */
+
+@media (max-width: $width-general-bp) and (max-height: $height-general-bp) {}
