--- a/styles/_var.scss
+++ b/styles/_var.scss
@@ -1,7 +1,58 @@
 @font-face {
-    src: url(Bhaijaan.ttf);
+    src: url(../fonts/Bhaijaan.ttf);
     font-family: customFontOne;
 }
 
-$footer-color: #857f7fd6;
-$light-black-half-opacity-color: rgba(95, 95, 95, 0.551);
+@font-face {
+    src: url(../fonts/Amatic.ttf);
+    font-family: customFontTwo;
+}
+
+@font-face {
+    src: url(../fonts/Paytone.ttf);
+    font-family: customFontThree;
+}
+
+@font-face {
+    src: url(../fonts/Peg.ttf);
+    font-family: customFontFour;
+}
+
+$font-amatic: customFontTwo;
+$footer-color: #857f7fa6;
+$form-bottom-border-color: black;
+$form-transition-dur-setting: all 0.30s ease-in-out;
+
+/*  */
+
+
+/* breakpoints desktop */
+
+$width-desktop-bp: 1600px;
+$height-desktop-bp: 800px;
+
+/* breakpoints hd */
+
+$width-hd-bp: 1280px;
+$height-hd-bp: 720px;
+
+/* breakpoints  general*/
+
+$width-general-bp: 360px;
+$height-general-bp: 640px;
+
+/* breakpoints iphone8 */
+
+$width-iphone8-bp: 414px;
+$height-iphone8-bp: 737px;
+
+/* breakpoints ipad */
+
+$width-tablet-bp: 768px;
+$height-tablet-bp: 962px;
+
+/* 
+@media (min-width: 1366) and (min-height: 768px) {}
+@media (min-width: 1440) and (min-height: 900px) {}  
+@media (min-width: 601px) and (min-height: 962px) {} 
+*/
