--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,21 +8,11 @@
 html,
 body {
     scroll-behavior: smooth;
-    -ms-overflow-style: none;
     scrollbar-width: none;
-    /* font-family: 'Quicksand', sans-serif; */
-}
-
-html::-webkit-scrollbar,
-body::-webkit-scrollbar {
-    display: none;
 }
 
 body {
-    /* background-image: url("leaf.jpg");*/
-    /*  background: #171717; */
-    /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
-    background-size: 210px 210px; */
+    font-family: customFontOne;
 }
 
 main {
@@ -32,4 +22,16 @@ main {
     img:hover {
         @include hover-image-animation
     }
+}
+
+.reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.reveal.active {
+    transform: translateY(0px);
+    opacity: 1;
 }
